--- a/Google.Cast/source/Google.Cast/Google.Cast.targets
+++ b/Google.Cast/source/Google.Cast/Google.Cast.targets
@@ -4,7 +4,7 @@
 		<_GoogleCastAssemblyName>Google.Cast, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleCastAssemblyName>
 		<_GoogleCastItemsFolder>GCstSDK-2.10.4</_GoogleCastItemsFolder>
 	</PropertyGroup>
-	<ItemGroup Condition="'$(OutputType)'!='Library'">
+	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleCastItemsFolder)">
 			<Url>https://redirector.gvt1.com/edgedl/chromecast/sdk/ios/GoogleCastSDK-2.10.4-Release-ios-default-External.zip</Url>
 			<Kind>Zip</Kind>
