--- a/Google.SignIn/source/Google.SignIn/Google.SignIn.csproj
+++ b/Google.SignIn/source/Google.SignIn/Google.SignIn.csproj
@@ -41,7 +41,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="GoogleSignIn.linkwith.cs">
-      <DependentUpon>libSignIn_external.a</DependentUpon>
+      <DependentUpon>GoogleSignIn</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
