[google][core] Fixed some reference names on .target file - Removed GGLAnalytics binary from Google.Core binding

--- a/Google.Core/source/Google.Core/Google.Core.csproj
+++ b/Google.Core/source/Google.Core/Google.Core.csproj
@@ -40,7 +40,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GGLCore.linkwith.cs">
-      <DependentUpon>libGGLCore.a</DependentUpon>
+      <DependentUpon>GGLCore</DependentUpon>
     </Compile>
     <Compile Include="Loader.cs" />
   </ItemGroup>
