[firebase][invites] Added a quick sample to verify the binding - Fixed many errors on .targets file Known issues: - Component does not work with "Incremental builds"

--- a/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.csproj
+++ b/Firebase.Invites/source/Firebase.Invites/Firebase.Invites.csproj
@@ -37,7 +37,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="FirebaseInvites.linkwith.cs">
-      <DependentUpon>..\..\..\Google.SignIn\source\Google.SignIn\libSignIn_external.a</DependentUpon>
+      <DependentUpon>FirebaseInvites</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
