--- a/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.csproj
+++ b/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.csproj
@@ -39,6 +39,7 @@
       <DependentUpon>FirebaseAnalytics</DependentUpon>
     </Compile>
     <Compile Include="Loader.cs" />
+    <Compile Include="Extension.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
