--- a/Google.Analytics/component/component.yaml
+++ b/Google.Analytics/component/component.yaml
@@ -6,8 +6,8 @@ publisher-url: http://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.Analytics
 summary: "Collect, configure, and analyze your data to reach the right audience."
 icons:
-  - icons/googleiosanalytics_128x128.png
-  - icons/googleiosanalytics_512x512.png
+  - ../../icons/googleiosanalytics_128x128.png
+  - ../../icons/googleiosanalytics_512x512.png
 docs-url: https://developers.google.com/analytics/
 libraries:
   ios-unified: 
