--- a/Google.AppIndexing/component/component.yaml
+++ b/Google.AppIndexing/component/component.yaml
@@ -6,8 +6,8 @@ publisher-url: http://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.AppIndexing
 summary: Get your app found in Google Search.
 icons:
-  - icons/googleiosappindexing_128x128.png
-  - icons/googleiosappindexing_512x512.png
+  - ../../icons/googleiosappindexing_128x128.png
+  - ../../icons/googleiosappindexing_512x512.png
 docs-url: https://developers.google.com/app-indexing/
 libraries:
   ios-unified: 
