--- a/Google.Maps/component/component.yaml
+++ b/Google.Maps/component/component.yaml
@@ -6,8 +6,8 @@ publisher-url: http://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.Maps
 summary: "Add custom markers, styled maps, 3D buildings, indoor floor plans, street view, satellite imagery, and more to your iOS app."
 icons:
-  - icons/googleiosmaps_128x128.png
-  - icons/googleiosmaps_512x512.png
+  - ../../icons/googleiosmaps_128x128.png
+  - ../../icons/googleiosmaps_512x512.png
 docs-url: "https://developers.google.com/maps/documentation/ios/"
 libraries:
   ios-unified: 
