--- a/Google.MobileAds/component/component.yaml
+++ b/Google.MobileAds/component/component.yaml
@@ -6,7 +6,8 @@ publisher-url: https://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.MobileAds
 summary: Connect with advertisers and show relevant ads in your app. Users click on ads, you make money.
 icons:
-  - icons/googleadmob_128x128.png
+  - ../../icons/googlemobileads_128x128.png
+  - ../../icons/googlemobileads_512x512.png
 docs-url: https://developers.google.com/admob/
 libraries:
   ios-unified:
