--- a/Google.TagManager/component/component.yaml
+++ b/Google.TagManager/component/component.yaml
@@ -6,8 +6,8 @@ publisher-url: http://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.TagManager
 summary: "Update app-settings or in-app tracking without needing to rebuild and publish your apps."
 icons:
-  - icons/googleiostagmanager_128x128.png
-  - icons/googleiostagmanager_512x512.png
+  - ../../icons/googleiostagmanager_128x128.png
+  - ../../icons/googleiostagmanager_512x512.png
 docs-url: "https://developers.google.com/tag-manager/"
 libraries:
   ios-unified: 
