--- a/Firebase.AdMob/nuget/Xamarin.Firebase.iOS.AdMob.nuspec
+++ b/Firebase.AdMob/nuget/Xamarin.Firebase.iOS.AdMob.nuspec
@@ -11,7 +11,7 @@
     <copyright>Copyright 2016</copyright>
     <projectUrl>https://components.xamarin.com/view/firebaseiosadmob</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/firebaseiosadmob</licenseUrl>
-    <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosadmob_128x128.png</iconUrl>
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.1"/>
       <dependency id="Xamarin.Google.iOS.MobileAds" version="7.8.1.0"/>
