--- a/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
+++ b/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
@@ -11,7 +11,7 @@
     <copyright>Copyright 2016</copyright>
     <projectUrl>https://components.xamarin.com/view/firebaseiosanalytics</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/firebaseiosanalytics</licenseUrl>
-    <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosanalytics_128x128.png</iconUrl>
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.1"/>
       <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.7.0"/>
