--- a/Firebase.CloudMessaging/nuget/Xamarin.Firebase.iOS.CloudMessaging.nuspec
+++ b/Firebase.CloudMessaging/nuget/Xamarin.Firebase.iOS.CloudMessaging.nuspec
@@ -11,7 +11,7 @@
     <copyright>Copyright 2016</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosgcm</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosgcm</licenseUrl>
-    <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseioscloudmessaging_128x128.png</iconUrl>
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.2"/>
       <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.2.1.0"/>
