--- a/Firebase.InstanceID/nuget/Xamarin.Firebase.iOS.InstanceID.nuspec
+++ b/Firebase.InstanceID/nuget/Xamarin.Firebase.iOS.InstanceID.nuspec
@@ -11,7 +11,7 @@
     <copyright>Copyright 2016</copyright>
     <projectUrl>https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Firebase.InstanceID</projectUrl>
     <licenseUrl>https://github.com/xamarin/GoogleApisForiOSComponents/blob/master/Firebase.InstanceID/License.md/</licenseUrl>
-    <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosinstanceid_128x128.png</iconUrl>
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.1"/>
     </dependencies>
