--- a/Google.Analytics/nuget/Xamarin.Google.iOS.Analytics.nuspec
+++ b/Google.Analytics/nuget/Xamarin.Google.iOS.Analytics.nuspec
@@ -11,7 +11,7 @@
     <copyright>Copyright 2015-2016</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosanalytics</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosanalytics</licenseUrl>
-    <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosanalytics_128x128.png</iconUrl>
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.2"/>
     </dependencies>
