--- a/Google.AppInvite/nuget/Xamarin.Google.iOS.AppInvite.nuspec
+++ b/Google.AppInvite/nuget/Xamarin.Google.iOS.AppInvite.nuspec
@@ -11,7 +11,7 @@
     <copyright>Copyright 2015-2016</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosappinvite</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosappinvite</licenseUrl>
-    <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosappinvite_128x128.png</iconUrl>
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.2"/>
       <dependency id="Xamarin.Google.iOS.Core" version="2.0.4.1"/>
