--- a/Google.Core/nuget/Xamarin.Google.iOS.Core.nuspec
+++ b/Google.Core/nuget/Xamarin.Google.iOS.Core.nuspec
@@ -11,7 +11,7 @@
     <copyright>Copyright 2015-2016</copyright>
     <projectUrl>https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.Core</projectUrl>
     <licenseUrl>https://github.com/xamarin/GoogleApisForiOSComponents/blob/master/Google.Core/License.md/</licenseUrl>
-    <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleioscore_128x128.png</iconUrl>
     <dependencies>
       <dependency id="Xamarin.Build.Download" version="0.2.2"/>
       <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.2.1.0"/>
