--- a/Google.PlayGames/nuget/Xamarin.Google.iOS.PlayGames.nuspec
+++ b/Google.PlayGames/nuget/Xamarin.Google.iOS.PlayGames.nuspec
@@ -11,7 +11,7 @@
     <copyright>Copyright 2015-2016</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosplaygames</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosplaygames</licenseUrl>
-    <iconUrl>https://xamarin-component-icons.s3.amazonaws.com/Xamarin.Google.iOS.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosplaygames_128x128.png</iconUrl>
     <dependencies> 
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.2.2"/>
