--- a/Firebase.DynamicLinks/component/component.yaml
+++ b/Firebase.DynamicLinks/component/component.yaml
@@ -19,21 +19,19 @@ packages:
   ios-unified:
     - Xamarin.Firebase.iOS.DynamicLinks, Version=1.1.0.0
 samples:
-  - name: "AppInvite Sample"
-    path: ../samples/AppInviteSample/AppInviteSample.sln
+  - name: "Dynamic Links Sample"
+    path: ../samples/DynamicLinksSample/DynamicLinksSample.sln
     removeProjects: 
-      - Google.AppInvite
-      - Google.SignIn
-      - Google.Core
-    removeFiles:
-      - AppInviteSample/Makefile
+      - Firebase.DynamicLinks
+      - Firebase.Analytics
+      - Firebase.InstanceID
     installNuGets:
-      - project: AppInviteSample
+      - project: DynamicLinksSample
         packages:
-          - Xamarin.Firebase.iOS.Analytics
+          - Xamarin.Firebase.iOS.DynamicLinks
     removeNodes:
-      - "//xNS:Import[contains (@Project, 'Google.AppInvite.targets')]"
-      - "//xNS:Import[contains (@Project, 'Google.Core.targets')]"
-      - "//xNS:Import[contains (@Project, 'Google.SignIn.targets')]"
+      - "//xNS:Import[contains (@Project, 'Firebase.DynamicLinks.targets')]"
+      - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
+      - "//xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]"
 local-nuget-repo: ../../tmp-nugets
 no_build: true
