--- a/Firebase.DynamicLinks/samples/DynamicLinksSample/DynamicLinksSample/Info.plist
+++ b/Firebase.DynamicLinks/samples/DynamicLinksSample/DynamicLinksSample/Info.plist
@@ -39,7 +39,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.xamarin.firebase.dynamiclinkssample</string>
+				<string>com.xamarin.firebase.ios.dynamiclinkssample</string>
 			</array>
 			<key>CFBundleURLName</key>
 			<string>Bundle ID</string>
