--- a/Google.TagManager/externals/Podfile
+++ b/Google.TagManager/externals/Podfile
@@ -1,9 +1,36 @@
 
+=begin
+Last run GoogleTagManager installed:
+- FirebaseAnalytics (3.2.1)
+- FirebaseInstanceID (1.0.7)
+- GoogleAnalytics (3.17.0)
+- GoogleInterchangeUtilities (1.2.1)
+- GoogleSymbolUtilities (1.1.1)
+- GoogleTagManager (5.0.6)
+- GoogleUtilities (1.3.1)
+
+Check if main version or subversion number has changed. 
+If yes, please, update *.targets files located in binding 
+projects, also, update Podfile files if needed.
+
+In .targets file, located in Google.TagManager binding, you can find:
+- GoogleTagManager (5.0.6)
+
+In .targets file, located in Firebase.Analytics binding, you can find:
+- FirebaseAnalytics (3.2.1)
+- GoogleInterchangeUtilities (1.2.1)
+- GoogleSymbolUtilities (1.1.1)
+- GoogleUtilities (1.3.1)
+
+In .targets file, located in Firebase.InstanceID binding, you can find:
+- FirebaseInstanceID (1.0.7)
+=end
+
 source 'https://github.com/CocoaPods/Specs.git'
 
-platform :ios, '6.0'
+platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'GoogleTagManager' do
-	pod 'GoogleTagManager', '3.15.0'
+	pod 'GoogleTagManager', '5.0.6'
 end
