[google][tagmanager] Updated to version 5.0.6 - Now it depends on Firebase.Analytics too - Updated binding to version 5.0.6 - Created new documentation - Added a new sample, removed the old one

--- a/Google.Analytics/source/Google.Analytics/Google.Analytics.targets
+++ b/Google.Analytics/source/Google.Analytics/Google.Analytics.targets
@@ -15,14 +15,17 @@
 	</ItemGroup>
 
 	<Target Name="_GoogleAnalyticsItems">
-		<ItemGroup>
 
-			<RestoreAssemblyResource Include="$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\Libraries\libGoogleAnalytics.a">
+		<PropertyGroup>
+			<_GoogleAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\Libraries\</_GoogleAnalyticsSDKBaseFolder>
+		</PropertyGroup>
+		
+		<ItemGroup>
+			<RestoreAssemblyResource Include="$(_GoogleAnalyticsSDKBaseFolder)libGoogleAnalytics.a">
 				<LogicalName>libGoogleAnalytics.a</LogicalName>
 				<AssemblyName>$(_GoogleAnalyticsAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-
 		</ItemGroup>
+		
 	</Target>
-
 </Project>
