--- a/Google.TagManager/nuget/Xamarin.Google.iOS.TagManager.nuspec
+++ b/Google.TagManager/nuget/Xamarin.Google.iOS.TagManager.nuspec
@@ -16,6 +16,7 @@
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.2.2"/>
         <dependency id="Xamarin.Google.iOS.Analytics" version="3.17.0.0"/>
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.2.1.0"/>
       </group>
     </dependencies>
   </metadata>
