--- a/Google.TagManager/source/Google.TagManager/Google.TagManager.csproj
+++ b/Google.TagManager/source/Google.TagManager/Google.TagManager.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -45,7 +46,6 @@
     <Compile Include="libTagManager.linkwith.cs">
       <DependentUpon>libTagManager.a</DependentUpon>
     </Compile>
-    <Compile Include="Extensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
@@ -58,6 +58,14 @@
     <ProjectReference Include="..\..\..\Google.Analytics\source\Google.Analytics\Google.Analytics.csproj">
       <Project>{EA3C7951-A91C-437E-9626-F16E31214A0F}</Project>
       <Name>Google.Analytics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
+      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
+      <Name>Firebase.Analytics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
+      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
+      <Name>Firebase.InstanceID</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
