--- a/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
+++ b/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
@@ -8,7 +8,7 @@
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Firebase APIs Analytics iOS Library</description>
-    <copyright>Copyright 2016</copyright>
+    <copyright>Copyright 2016 Microsoft</copyright>
     <projectUrl>https://components.xamarin.com/view/firebaseiosanalytics</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/firebaseiosanalytics</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosanalytics_128x128.png</iconUrl>
