--- a/Firebase.DynamicLinks/nuget/Xamarin.Firebase.iOS.DynamicLinks.nuspec
+++ b/Firebase.DynamicLinks/nuget/Xamarin.Firebase.iOS.DynamicLinks.nuspec
@@ -8,7 +8,7 @@
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Firebase APIs Dynamic Links iOS Library</description>
-    <copyright>Copyright 2016</copyright>
+    <copyright>Copyright 2016 Microsoft</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosappinvite</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosappinvite</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosdynamiclinks_128x128.png</iconUrl>
