--- a/Firebase.InstanceID/nuget/Xamarin.Firebase.iOS.InstanceID.nuspec
+++ b/Firebase.InstanceID/nuget/Xamarin.Firebase.iOS.InstanceID.nuspec
@@ -8,7 +8,7 @@
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Firebase APIs Instance ID iOS Library</description>
-    <copyright>Copyright 2016</copyright>
+    <copyright>Copyright 2016 Microsoft</copyright>
     <projectUrl>https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Firebase.InstanceID</projectUrl>
     <licenseUrl>https://github.com/xamarin/GoogleApisForiOSComponents/blob/master/Firebase.InstanceID/License.md/</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosinstanceid_128x128.png</iconUrl>
