--- a/Google.AppIndexing/nuget/Xamarin.Google.iOS.AppIndexing.nuspec
+++ b/Google.AppIndexing/nuget/Xamarin.Google.iOS.AppIndexing.nuspec
@@ -8,7 +8,7 @@
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Google APIs App Indexing iOS Library</description>
-    <copyright>Copyright 2015-2016</copyright>
+    <copyright>Copyright 2015-2016 Microsoft</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosappindexing/</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosappindexing</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosappindexing_128x128.png</iconUrl>
