--- a/Google.Core/nuget/Xamarin.Google.iOS.Core.nuspec
+++ b/Google.Core/nuget/Xamarin.Google.iOS.Core.nuspec
@@ -8,7 +8,7 @@
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Core iOS Library</description>
-    <copyright>Copyright 2015-2016</copyright>
+    <copyright>Copyright 2015-2016 Microsoft</copyright>
     <projectUrl>https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.Core</projectUrl>
     <licenseUrl>https://github.com/xamarin/GoogleApisForiOSComponents/blob/master/Google.Core/License.md/</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleioscore_128x128.png</iconUrl>
