--- a/Google.GoogleCloudMessaging/nuget/Xamarin.Google.iOS.GoogleCloudMessaging.nuspec
+++ b/Google.GoogleCloudMessaging/nuget/Xamarin.Google.iOS.GoogleCloudMessaging.nuspec
@@ -8,7 +8,7 @@
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Google Cloud Messaging iOS Library</description>
-    <copyright>Copyright 2015-2016</copyright>
+    <copyright>Copyright 2015-2016 Microsoft</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosgcm</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosgcm</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosgcm_128x128.png</iconUrl>
