--- a/Google.InstanceID/nuget/Xamarin.Google.iOS.InstanceID.nuspec
+++ b/Google.InstanceID/nuget/Xamarin.Google.iOS.InstanceID.nuspec
@@ -8,7 +8,7 @@
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Instance ID iOS Library</description>
-    <copyright>Copyright 2015-2016</copyright>
+    <copyright>Copyright 2015-2016 Microsoft</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosinstanceid</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosinstanceid</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosinstanceid_128x128.png</iconUrl>
