--- a/Google.PlayGames/nuget/Xamarin.Google.iOS.PlayGames.nuspec
+++ b/Google.PlayGames/nuget/Xamarin.Google.iOS.PlayGames.nuspec
@@ -8,7 +8,7 @@
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Play Games iOS Library</description>
-    <copyright>Copyright 2015-2016</copyright>
+    <copyright>Copyright 2015-2016 Microsoft</copyright>
     <projectUrl>https://components.xamarin.com/view/googleiosplaygames</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosplaygames</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosplaygames_128x128.png</iconUrl>
